--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.tianyigps.dispatch2"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 30
-        versionName "2.4"
+        versionCode 31
+        versionName "3.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -65,4 +65,6 @@ dependencies {
     compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
     testCompile 'junit:junit:4.12'
     compile files('libs/crasheye_2.2.2.jar')
+    compile files('libs/jcore-android-1.2.3.jar')
+    compile files('libs/jpush-android-3.1.5.jar')
 }
